<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="24dp"
    android:background="@color/colorGreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_momo"
        android:layout_gravity="center"
        android:textColor="@color/colorRed"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_Username"
            android:layout_weight="1"
            android:textColor="@color/colorYellow"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="1706020071"
            android:id="@+id/Login_edtUsername"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_Password"
            android:layout_weight="2"
            android:textColor="@color/colorYellow"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="hiraimomo"
            android:id="@+id/Login_edtPassword"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_btnlogin"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textColor="@color/colorRed"
        android:id="@+id/Login_btnLogin"/>
</LinearLayout>